--- a/index.html
+++ b/index.html
@@ -12,4 +12,4 @@
 <H1>Computer Sci Projects</H1>
 
 <H2>Chapter 1</H2>
-<a href="/readme.md">Link Name</a>
+<a href="/ComputerSci/readme.md">Link Name</a>
